fix pui-filter-menu top and bottom padding/margin alignment

--- a/src/pages/url-list/url-list.less
+++ b/src/pages/url-list/url-list.less
@@ -1,4 +1,9 @@
 seo-url-list {
+
+    .page-header {
+        margin-bottom: 6px;
+    }
+
     .label.keypath {
         display: inline-block;
         font-size: @font-size-small;
@@ -15,7 +20,6 @@ seo-url-list {
     .filters {
         border-bottom: 1px solid #D6D6D6;
         margin: 0 0 21px 0;
-        padding-bottom: 10px;
 
         .btn-link:hover, .btn-link:focus {
             text-decoration: none;
@@ -27,6 +31,11 @@ seo-url-list {
 
         .filter-trigger-button-label {
             text-transform: capitalize;
+        }
+
+        .icon-chevron {
+            position: relative;
+            bottom: 5px;
         }
 
         // Green label
